add use history with realtime updates