@@ -16,7 +16,8 @@ import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.atomic.AtomicInteger;
 
 public class IBConnectorImpl implements IBConnector {
-    private static final Logger log = LogManager.getLogger("IBConnector");
+    private static final Logger log = LogManager.getLogger("IBConnectorImpl");
+    public static final String CONTRACT_MONTH = "202403";
     private EClientSocket m_client;
     private EReaderSignal m_signal;
     private EReader reader;
@@ -34,7 +35,7 @@ public class IBConnectorImpl implements IBConnector {
     }
 
     @Override
-    public void process() {
+    public void process(boolean fSingleDay) {
         EWrapperImpl wrapper = new EWrapperImpl(actions);
 
         m_client = wrapper.getClient();
@@ -49,9 +50,14 @@ public class IBConnectorImpl implements IBConnector {
         new Thread(this::connectionThread).start();
         sleep(1_000);
         m_client.reqCurrentTime();
-//        getHistoricalIndexData("TICK-NYSE", "NYSE", Duration.DAY_5);
-        getHistoricalData("ES", "202403", Duration.DAY_1);
-//        getHistoricalData("NQ", "202403", Duration.DAY_5);
+        if (fSingleDay) {
+            getHistoricalData("ES", CONTRACT_MONTH, Duration.DAY_1, false);
+//            getRealTimeBars("ES", CONTRACT_MONTH);
+        } else {
+            getHistoricalIndexData("TICK-NYSE", "NYSE", Duration.DAY_5, false);
+            getHistoricalData("ES", CONTRACT_MONTH, Duration.DAY_5, false);
+            getHistoricalData("NQ", CONTRACT_MONTH, Duration.DAY_5, false);
+        }
 //        sleep(30_000);
         m_client.eDisconnect();
         sleep(1_000);
@@ -76,13 +82,13 @@ public class IBConnectorImpl implements IBConnector {
     }
 
 
-    private void getHistoricalData(String symbol, String contractMonth, Duration duration) {
+    private void getHistoricalData(String symbol, String contractMonth, Duration duration, boolean keepUpToDate) {
         try {
             requestContractDetails(symbol, contractMonth);
             var action = takeFromQueue(ContractDetailsAction.class);
             processContractDetails(action);
 
-            requestHistoricalData(action.getContract(),  duration);
+            requestHistoricalData(action.getContract(), duration, keepUpToDate);
             var hdAction = takeFromQueue(HistoricalDataAction.class);
             processHistoricalData(hdAction, true);
         } catch (InterruptedException e) {
@@ -90,15 +96,40 @@ public class IBConnectorImpl implements IBConnector {
         }
     }
 
-    private void getHistoricalIndexData(String symbol, String exchange, Duration duration) {
+    private void getHistoricalIndexData(String symbol, String exchange, Duration duration, boolean keepUpToDate) {
         try {
             var contract = contractFactory.newIndex(symbol, exchange);
-            requestHistoricalData(contract,  duration);
+            requestHistoricalData(contract, duration, keepUpToDate);
             var hdAction = takeFromQueue(HistoricalDataAction.class);
             processHistoricalIndexData(hdAction);
         } catch (InterruptedException e) {
             log.error(e);
         }
+    }
+
+    private void getRealTimeBars(String symbol, String contractMonth) {
+        try {
+            requestContractDetails(symbol, contractMonth);
+            var action = takeFromQueue(ContractDetailsAction.class);
+            processContractDetails(action);
+
+            requestRealTimeBars(action.getContract());
+            var rtAction = takeFromQueue(RealTimeBarsAction.class);
+            processRealTimeBars(rtAction);
+        } catch (InterruptedException e) {
+            log.error(e);
+        }
+    }
+
+    private void requestRealTimeBars(Contract contract) {
+        log.info("requestRealTimeBars");
+        var action = new RealTimeBarsAction(m_client, id, queue, contract);
+        actions.put(action.getRequestId(), action);
+        action.makeRequest();
+    }
+
+    private void processRealTimeBars(RealTimeBarsAction rtAction) {
+        log.info("processRealTimeBars");
     }
 
     private void requestContractDetails(String symbol, String contractMonth) {
@@ -113,9 +144,9 @@ public class IBConnectorImpl implements IBConnector {
         log.info(cd.conid() + " " + cd.contract().description());
     }
 
-    private void requestHistoricalData(Contract contract, Duration duration) {
+    private void requestHistoricalData(Contract contract, Duration duration, boolean keepUpToDate) {
         log.info("historicalData");
-        var action = new HistoricalDataAction(m_client, id, queue, contract, duration);
+        var action = new HistoricalDataAction(m_client, id, queue, contract, duration, keepUpToDate);
         actions.put(action.getRequestId(), action);
         action.makeRequest();
     }
@@ -125,11 +156,11 @@ public class IBConnectorImpl implements IBConnector {
         var contract = action.getContract();
         log.info("processHistoricalData " + bars.size());
         if (!bars.isEmpty()) {
-            log.info(contract.localSymbol() + " bars from " + bars.get(0).time() + " to " + bars.get(bars.size() - 1).time());
+            log.info(contract.localSymbol() + " bars from " + bars.getFirst().time() + " to " + bars.getLast().time());
             var history = action.getPriceHistory();
             var vwap = history.vwap("vwap");
             var rthBars = history.rthBars();
-            for (PriceHistory.Bar bar : rthBars) {
+            for (var bar : rthBars) {
                 log.info(bar.asDailyBar());
             }
             var index = history.index();
@@ -149,7 +180,7 @@ public class IBConnectorImpl implements IBConnector {
         var contract = action.getContract();
         log.info("processHistoricalData " + bars.size());
         if (!bars.isEmpty()) {
-            log.info(contract.symbol() + " bars from " + bars.get(0).time() + " to " + bars.get(bars.size() - 1).time());
+            log.info(contract.symbol() + " bars from " + bars.getFirst().time() + " to " + bars.getLast().time());
             var history = action.getPriceHistory();
             action.save(history.getDates()[0].toLocalDate());
         }
